# htmlConv

./: GUIDE.md  README.md  architecture_diagram.drawio  build.sh  pyproject.toml  roadmap.md  test.html
.github/workflows/: main.yml  publish.yml
examples/: 01_basic_usage.py  02_inline_styles.py  03_dynamic_children.py  04_attributes_manipulation.py  from_dict_example.py  quick_start.py  table_example.py
htmlConv/: node.py
htmlConv/constants/: html_tag_mappers.py
htmlConv/tests/: test_node.py
html_conv/: __init__.py  html.py  html_converter.py  html_node.py  types.py
html_conv/constants/: attributes.py  css_properties.py
html_conv/converters/: html_converter.py
html_conv/helpers/: html_converter.py
html_conv/primitives/: attributes.py  html_node.py  inline_style_attributes.py  inline_styles.py  node.py
html_conv/protocols/: __init__.py
html_сonv/: __init__.py  attrs_utils.py  node.py
nodie/: __init__.py  exceptions.py  logging_config.py
nodie/constants/: constants.py  types.py
nodie/converters/: html_converter.py
nodie/entities/: attributes.py  html_node.py  html_node.pyi  inline_style_attributes.py
nodie/helpers/: helpers.py
scripts/: build.ps1  lint.ps1  lint.sh
tests/: test_attributes.py  test_html.py  test_node.py  tests_node.py
